manifests/demo-nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodejs-service
spec:
  selector:
    app: demo-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
