manifests/demo-nodejs-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: demo-nodejs.blue-fifa.net
    http:  
      paths:
      - backend:
          serviceName: demo-nodejs-service
          servicePort: 3000
        pathType: ImplementationSpecific
        path: /
